fixing some scrollbar issues raised due margins in root layout
svn changeset:2737/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -11,6 +11,9 @@
 	height: 100%;
 	width: 100%
 	overflow: auto; 
+	/* avoid scrollbars with margins in root layout */
+	margin-top:-1px;
+	border-top:1px solid transparent;
 }
 
 #itmill-ajax-window input, 
